--- a/src/index.html
+++ b/src/index.html
@@ -5,111 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 <!--Criando um cabeçalho com menu e logo-->
 <header>
     <nav>
-            <a class =" logo" href="/">Finanças.Br</a>
-    <ul class="nav-list">
-        <li><a href="/"> Início </a></li>
-        <li><a href="/"> Sobre </a></li>
-        <li><a href="/"> Investimentos</a></li>
-        <li><a href="/"> Contato</a></li>
-    </ul>
-    <button>Sair</button>
-     </nav>
-    </header>
-   
-<body>
-    <div class = "navigation">
-        <ul>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="cash-outline"></ion-icon></span>
-                    <span class = "list2">Saldo Conta</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="person-outline"></ion-icon></span>
-                    <span class = "list2">Usuario</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="add-circle-outline"></ion-icon></span>
-                    <span class = "list2">Entradas</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="add-circle-outline"></ion-icon></span>
-                    <span class = "list2">Saidas</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="wallet-outline"></ion-icon></span>
-                    <span class = "list2">Investimentos</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="chatbox-outline"></ion-icon></span>
-                    <span class = "list2">Mensagens</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="help-circle-outline"></ion-icon></span>
-                    <span class = "list2">Ajuda</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-                    <span class = "list2">Senha</span>
-                </a>
-            </li>
-            <li class = "list2">
-                <a href="#">
-                    <span class = "icon"><ion-icon name="calculator-outline"></ion-icon></span>
-                    <span class = "list2">Calculadora FII´s</span>
-                </a>
-                <li class = "list2">
-                    <a href="#">
-                        <span class = "icon"><ion-icon name="settings-outline"></ion-icon></span>
-                        <span class = "list2">Configurações</span>
-                    </a>
-                </li>
-            </li>
+        <a class=" logo" href="/">Finanças.Br</a>
+        <ul class="nav-list">
+            <li><a href="/"> Início </a></li>
+            <li><a href="/"> Sobre </a></li>
+            <li><a href="/"> Investimentos</a></li>
+            <li><a href="/"> Contato</a></li>
         </ul>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    </div>
-    
-</body>
 
+        <button>Sair</button>
+    </nav>
+</header>
+<!--Criando menu lateral mais os graficos-->
+<main>
+    <div class="main-content">
+        <div class="navigation">
+            <ul>
+                <li><a href="#"><span class="icon"><ion-icon name="cash-outline"></ion-icon></span>Saldo Conta</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="add-circle-outline"></ion-icon></span>Entradas</a>
+                </li>
+                <li><a href="#"><span class="icon"><ion-icon name="add-circle-outline"></ion-icon></span>Saidas</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span>Investimentos</a>
+                </li>
+                <li><a href="#"><span class="icon"><ion-icon name="chatbox-outline"></ion-icon></span>Mensagens</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>Ajuda</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>Senha</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="calculator-outline"></ion-icon></span>Calculadora
+                        FII</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="settings-outline"></ion-icon></span>Configurações</a>
+                </li>
+            </ul>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        </div>
+        <div class="images-container">
+            <img src="IMG/img-grafico-1.png" alt="Image 1">
+            <img src="IMG/img-grafico-2.png" alt="Image 2">
+        </div>
+    </div>
+</main>
+<!--Criando um rodapé-->
 <footer>
     <div class="footer-info">
-      <div class="address">
-        <h4>Endereço:</h4>
-        <p>Rua do Exemplo, 1234</p>
-        <p>Cidade - Estado</p>
-        <p>CEP: 00000-000</p>
-      </div>
-      <div class="contact">
-        <h4>Contato:</h4>
-        <p>Telefone: (00) 0000-0000</p>
-        <p>Email: exemplo@exemplo.com</p>
-      </div>
+        <div class="address">
+            <h4>Endereço:</h4>
+            <p>Rua do Exemplo, 1234</p>
+            <p>Cidade - Estado</p>
+            <p>CEP: 00000-000</p>
+        </div>
+        <div class="contact">
+            <h4>Contato:</h4>
+            <p>Telefone: (00) 0000-0000</p>
+            <p>Email: exemplo@exemplo.com</p>
+        </div>
     </div>
     <div class="footer-copy">
-      <p>&copy; 2023 - Todos os direitos reservados.</p>
+        <p>&copy; 2023 - Todos os direitos reservados.</p>
     </div>
-  </footer>
-  
+</footer>
+
 </html>
