--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <div class="footer-info">
         <div class="address">
             <h4>Endereço:</h4>
-            <p>Rua do Exemplo, 1234</p>
-            <p>Cidade - Estado</p>
-            <p>CEP: 00000-000</p>
+            <p>Rua do Mar, 1234</p>
+            <p>Belo Horizonte - Minas Gerais</p>
+            <p>CEP: 30700-370</p>
         </div>
         <div class="contact">
             <h4>Contato:</h4>
-            <p>Telefone: (00) 0000-0000</p>
-            <p>Email: exemplo@exemplo.com</p>
+            <p>Telefone: (31) 9828-0171</p>
+            <p>Email: contato@finançasbr.com</p>
         </div>
     </div>
     <div class="footer-copy">
