adionando botão de cadastro

--- a/src/homepage_sem_login.html
+++ b/src/homepage_sem_login.html
@@ -22,7 +22,7 @@
 
         <div class="botoes">
             <a class="login" href="./tela de login.html">Login</a>
-            <a class="cadastro" href="">Cadastre-se</a>
+            <a class="cadastro" href="./tela de cadastro.html">Cadastre-se</a>
         </div>
     </nav>
 </header>
