--- a/src/tela de login.html
+++ b/src/tela de login.html
@@ -32,19 +32,16 @@
          font-size: 15px;
       }
 
-      button {
-         background-color: dodgerblue;
-         border: none;
-         padding: 15px;
-         width: 100%;
-         border-radius: 10px;
-         color: ghostwhite;
-         font-size: 15px;
-      }
+      .button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+      margin-left: 70px;
 
-      button:hover {
-         background-color: deepskyblue;
-         cursor: pointer;
       }
    </style>
 
@@ -60,7 +57,7 @@
             <br><br>
             <input type="password" placeholder="Senha">
             <br><br>
-            <button>Enviar</button>
+            <a href="./Tela Home User Logado.html" class="button">Enviar</a>
          </form>
          <p> Ainda não tem uma conta? <a href="./tela de cadastro.html"> Criar conta </a></p>
       </div>
