--- a/src/homepage_sem_login.html
+++ b/src/homepage_sem_login.html
@@ -41,8 +41,7 @@
                 <li><a href="#"><span class="icon"><ion-icon name="chatbox-outline"></ion-icon></span>Mensagens</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>Ajuda</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>Senha</a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="calculator-outline"></ion-icon></span>Calculadora
-                        FII</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="calculator-outline"></ion-icon></span>Calculadora FII</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="settings-outline"></ion-icon></span>Configurações</a>
                 </li>
             </ul>
@@ -83,10 +82,8 @@
             </div>
 
             <div class="titulo">
-                <div>
-                    <p class="titulo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
+                <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
+                <div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="BRL" data-secondary="" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-statsticker="true" data-stats="USD"></div>
             </div>
         </div>
     </div>
