--- a/src/tela de login.html
+++ b/src/tela de login.html
@@ -51,7 +51,7 @@
    <section class="area-login">
 
       <div>
-         <form method="post"">
+         <form method="post">
         <h1>Login</h1>
         <input type=" text" placeholder="Nome do usuário" autofocus>
             <br><br>
