modificando homepage sem login

--- a/src/investimentos.html
+++ b/src/investimentos.html
@@ -31,10 +31,12 @@
     <div class="main-content">
         <div class="navigation">
             <ul>
-                <li><a href="./entrada.html"><span class="icon"><ion-icon name="cash-outline"></ion-icon></span>Saldo Conta</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="cash-outline"></ion-icon></span>Saldo Conta</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="add-circle-outline"></ion-icon></span>Entradas</a>
                 </li>
-                <li><a href="./investimentos.html"><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span>Investimentos</a>
+                <li><a href="#"><span class="icon"><ion-icon name="add-circle-outline"></ion-icon></span>Saidas</a></li>
+                <li><a href="#"><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span>Investimentos</a>
                 </li>
                 <li><a href="#"><span class="icon"><ion-icon name="chatbox-outline"></ion-icon></span>Mensagens</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>Ajuda</a></li>
@@ -49,36 +51,11 @@
     </div>
 
     <div class="principal">
-        <div class="item1">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="titulo">
+            <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
+            <div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="BRL" data-secondary="" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-statsticker="true" data-stats="USD"></div>
         </div>
-
-        <div class="item2">
-            <img src="./img/img-grafico.png" alt="">
-        </div>
-
-        <div class="item3">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-        </div>
-
-        <div class="item4">
-            <div class="titulo">
-                <div>
-                    <p class="titulo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-
-            <div class="titulo">
-                <div>
-                    <p class="titulo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
+    </div>
     </div>
 </main>
 <!--Criando um rodapé-->
