--- a/src/entrada.html
+++ b/src/entrada.html
@@ -15,7 +15,7 @@
 
 <body>
   <main>
-    <div class="resume" </div>
+    <div class="resume">
       Entradas: R$
       <span class="incomes">0.00</span>
     </div>
@@ -30,7 +30,8 @@
     </div>
 
 
-    </div class="newItem" <div class="divDesc">
+    <div class="newItem"></div>
+    <div class="divDesc">
     <label for="desc">Descrição</label>
     <input type="text" id="desc" />
     </div>
@@ -63,7 +64,7 @@
     </div>
   </main>
 
-  <script src="script.js"><</script>
+  <script src="script.js"></script>
 </body>
 
 </html>
