--- a/src/investimentos.html
+++ b/src/investimentos.html
@@ -12,17 +12,16 @@
 <!--Criando um cabeçalho com menu e logo-->
 <header>
     <nav>
-        <a class=" logo" href="/">Finanças.Br</a>
+        <a class=" logo" href="./Tela Home User Logado.html">Finanças.Br</a>
         <ul class="nav-list">
-            <li><a href="/"> Início </a></li>
+            <li><a href="./Tela Home User Logado.html"> Início </a></li>
             <li><a href="/"> Sobre </a></li>
-            <li><a href="/"> Investimentos</a></li>
-            <li><a href="/"> Contato</a></li>
+            <li><a href="./investimentos.html"> Investimentos</a></li>
         </ul>
 
         <div class="botoes">
-            <a class="login" href="./Tela de Login inicial/tela de login.html">Login</a>
-            <a class="cadastro" href="./Tela de Cadastro/tela de cadastro.html">Cadastre-se</a>
+            <a class="Conta" href="../Editar Perfil.html">Minha Conta</a>
+            <a href="./tela de login.html"><button>Sair</button></a>
         </div>
     </nav>
 </header>
@@ -32,7 +31,7 @@
         <div class="navigation">
             <ul>
                 <li><a href="./entrada.html"><span class="icon"><ion-icon name="cash-outline"></ion-icon></span>Saldo Conta</a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
+                <li><a href="../Editar Perfil.html"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
                 </li>
                 <li><a href="./investimentos.html"><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span>Investimentos</a>
                 </li>
