--- a/src/tela de login.html
+++ b/src/tela de login.html
@@ -53,13 +53,13 @@
       <div>
          <form method="post">
         <h1>Login</h1>
-        <input type=" text" placeholder="Nome do usuário" autofocus>
+        <input type=" text" placeholder="E-mail" autofocus>
             <br><br>
             <input type="password" placeholder="Senha">
             <br><br>
-            <a href="./Tela Home User Logado.html" class="button">Enviar</a>
+            <a href="./Tela Home User Logado.html" class="button">Entrar</a>
          </form>
-         <p> Ainda não tem uma conta? <a href="./tela de cadastro.html"> Criar conta </a></p>
+         <p> Ainda não tem uma conta? <a href="./Tela de Cadastro/tela de cadastro.html"> Criar conta </a></p>
       </div>
 
    </section>
