--- a/src/homepage_sem_login.html
+++ b/src/homepage_sem_login.html
@@ -21,7 +21,7 @@
         </ul>
 
         <div class="botoes">
-            <a class="login" href="./Tela de Login inicial/tela de login.html">Login</a>
+            <a class="login" href="./tela de login.html">Login</a>
             <a class="cadastro" href="./Tela de Cadastro/tela de cadastro.html">Cadastre-se</a>
         </div>
     </nav>
