--- a/src/Editar Perfil.html
+++ b/src/Editar Perfil.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="Editarperfil.css">
-  <title>Finanças BR - Perfil</title>
+  <title>Editar Perfil - Finanças BR</title>
 </head>
 <!--INSERINDO UMA IMAGEM DE PERFIL-->
 <body>
@@ -32,7 +32,7 @@
   <!--VOLTANDO A PAGINA HOME LOGADO-->
   <article>
     <div class="voltar">
-      <a href="./src/Tela Home User Logado.html"><button>Voltar</button></a>
+      <a href="./Tela Home User Logado.html"><button>Voltar</button></a>
     </div>
   </article>
 </body>
