--- a/src/Tela Home User Logado.html
+++ b/src/Tela Home User Logado.html
@@ -12,18 +12,18 @@
 <!--Criando um cabeçalho com menu e logo-->
 <header>
     <nav>
-            <a class =" logo" href="/">Finanças.Br</a>
+            <a class =" logo" href="./Tela Home User Logado.html">Finanças.Br</a>
     <ul class="nav-list">
-        <li><a href="./homepage_sem_login.html"> Início </a></li>
-        <li><a href="/"> Sobre </a></li>
+        <li><a href="./Tela Home User Logado.html"> Início </a></li>
+        <li><a href="./sobre.html"> Sobre </a></li>
         <li><a href="./investimentos.html"> Investimentos</a></li>
-        <li><a href="/"> Contato</a></li>
+        <li><a href="./sobre.html"> Contato</a></li>
     </ul>
         </style>
         <div class="minha conta">
-        <a href="../Editar Perfil.html">
+        <a href="./Editar Perfil.html">
         <button type="button" class="btn btn-info">Minha Conta</button></a>
-        <a href="./tela de login.html"><button>Sair</button></a>
+        <a href="./homepage_sem_login.html"><button>Sair</button></a>
         </div>
      </nav>
     </header>
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li class = "list2">
-                <a href="#">
+                <a href="./entrada.html">
                     <span class = "icon"><ion-icon name="add-circle-outline"></ion-icon></span>
                     <span class = "list2">Saidas</span>
                 </a>
@@ -80,12 +80,12 @@
                 </a>
             </li>
             <li class = "list2">
-                <a href="#">
+                <a href="./calculadora.html">
                     <span class = "icon"><ion-icon name="calculator-outline"></ion-icon></span>
                     <span class = "list2">Calculadora FII´s</span>
                 </a>
                 <li class = "list2">
-                    <a href="#">
+                    <a href="./Editar Perfil.html">
                         <span class = "icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class = "list2">Configurações</span>
                     </a>
