--- a/src/investimentos.html
+++ b/src/investimentos.html
@@ -15,12 +15,12 @@
         <a class=" logo" href="./Tela Home User Logado.html">Finanças.Br</a>
         <ul class="nav-list">
             <li><a href="./Tela Home User Logado.html"> Início </a></li>
-            <li><a href="/"> Sobre </a></li>
+            <li><a href="./sobre.html"> Sobre </a></li>
             <li><a href="./investimentos.html"> Investimentos</a></li>
         </ul>
 
         <div class="botoes">
-            <a class="Conta" href="../Editar Perfil.html">Minha Conta</a>
+            <a class="Conta" href="./Editar Perfil.html">Minha Conta</a>
             <a href="./tela de login.html"><button>Sair</button></a>
         </div>
     </nav>
@@ -31,14 +31,14 @@
         <div class="navigation">
             <ul>
                 <li><a href="./entrada.html"><span class="icon"><ion-icon name="cash-outline"></ion-icon></span>Saldo Conta</a></li>
-                <li><a href="../Editar Perfil.html"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
+                <li><a href="./Editar Perfil.html"><span class="icon"><ion-icon name="person-outline"></ion-icon></span>Usuario</a></li>
                 </li>
                 <li><a href="./investimentos.html"><span class="icon"><ion-icon name="wallet-outline"></ion-icon></span>Investimentos</a>
                 </li>
                 <li><a href="#"><span class="icon"><ion-icon name="chatbox-outline"></ion-icon></span>Mensagens</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>Ajuda</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>Senha</a></li>
-                <li><a href="#"><span class="icon"><ion-icon name="calculator-outline"></ion-icon></span>Calculadora FII</a></li>
+                <li><a href="./calculadora.html"><span class="icon"><ion-icon name="calculator-outline"></ion-icon></span>Calculadora FII</a></li>
                 <li><a href="#"><span class="icon"><ion-icon name="settings-outline"></ion-icon></span>Configurações</a>
                 </li>
             </ul>
