--- a/src/homepage_sem_login.html
+++ b/src/homepage_sem_login.html
@@ -14,10 +14,10 @@
     <nav>
         <a class=" logo" href="/">Finanças.Br</a>
         <ul class="nav-list">
-            <li><a href="/"> Início </a></li>
-            <li><a href="/"> Sobre </a></li>
-            <li><a href="/"> Investimentos</a></li>
-            <li><a href="/"> Contato</a></li>
+            <li><a href="./homepage_sem_login.html"> Início </a></li>
+            <li><a href="./sobre.html"> Sobre </a></li>
+            <li><a href="./tela de login.html"> Investimentos</a></li>
+            <li><a href="./sobre.html"> Contato</a></li>
         </ul>
 
         <div class="botoes">
